name:                qualys
category:            API
version:             0.0.0.1
homepage:            https://github.com/ahodgen/qualys
bug-reports:         https://github.com/ahodgen/qualys/issues
license:             BSD3
license-file:        LICENSE
author:              Aaron Hodgen
maintainer:          ahodgen@kill-9.org
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Client for the Qualys API
description:         Client for the QUalys API

library
  Exposed-Modules:
    Qualys
    Qualys.Asset
    Qualys.Cookbook
    Qualys.Cookbook.KnowledgeBase
    Qualys.Cookbook.HostListDetection
    Qualys.Cookbook.Options
    Qualys.Cookbook.WasWebApp
    Qualys.HostListDetection
    Qualys.Internal
    Qualys.Internal.ParseWasAuthRec
    Qualys.Internal.ParseWasCommon
    Qualys.Internal.ParseWasScan
    Qualys.Internal.ParseWebApp
    Qualys.KnowledgeBase
    Qualys.Log
    Qualys.Report
    Qualys.Types.Was
    Qualys.WasScan
    Qualys.V2api
    Qualys.V3api
    Qualys.Scan
  Build-Depends:      base
                    , base64-bytestring
                    , bytestring
                    , containers
                    , conduit
                    , data-default
                    , exceptions
                    , failure
                    , http-client
                    , http-client-tls
                    , http-types
                    , monad-control
                    , mtl
                    , old-locale
                    , retry             >= 0.7
                    , safe
                    , text
                    , time
                    , transformers
                    , xml-conduit
                    , xml-types
                    , vector
                    , void

  ghc-options:   -Wall -O2 -fwarn-incomplete-patterns -Werror -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010
